src/test/ui/issues/issue-52533-1.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/issue-52533-1.rs:19:18
   |
LL |     gimme(|x, y| y)
   |                  ^

error: unsatisfied lifetime constraints
  --> $DIR/issue-52533-1.rs:19:18
   |
LL |     gimme(|x, y| y)
   |            -  -  ^ closure was supposed to return data with lifetime `'1` but it is returning data with lifetime `'2`
   |            |  |
   |            |  has type `&Foo<'_, '1, u32>`
   |            has type `&Foo<'_, '2, u32>`

error: aborting due to previous error

